# rsip

./: Cargo.toml
rsip-derives/: Cargo.toml
src/: lib.rs
src/common/: method.rs  status_code.rs  transport.rs  version.rs
src/common/uri/: auth.rs  mod.rs  scheme.rs  uri_with_params.rs  uri_with_params_list.rs
src/common/uri/host_with_port/: mod.rs
src/common/uri/param/: mod.rs
src/headers/: header.rs
src/headers/auth/: scheme.rs
src/headers/typed/tokenizers/: auth.rs  cseq.rs  display_uri_params.rs  name_params.rs  name_params_list.rs  name_value.rs  token_list.rs  via.rs  warning.rs
src/message/: request.rs  response.rs  sip_message.rs
