[package]
name = "rsip"
version = "0.4.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"
description = "SIP Rust library, parser & generator of SIP"
repository = "https://github.com/vasilakisfil/rsip"
documentation = "https://docs.rs/rsip"
keywords = ["sip", "3261", "session", "voip", "webrtc"]
categories = ["parser-implementations", "parsing", "network-programming"]
license-file = "LICENSE"


[workspace]
members = [
    "rsip-derives",
]

[dependencies]
uuid = { version = "1", features = ["v4"] }
bytes = "1"
nom = "8"
rsip-derives = { version = "0.4.0", path = "./rsip-derives" }
md-5 = "0.10"
sha2 = "0.10"
digest = "0.10"
testing-utils = { version = "0.1.1", optional = true }
bstr = "1"

[features]
test-utils = ["testing-utils"]

[dev-dependencies]
quote = "1"
rand = { version = "0.8" }
